# rubyx

./: .gitignore  .rspec  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  pyproject.toml  rubyx.gemspec
.github/workflows/: asan.yml  ci.yml  release.yml
examples/: calculator_data_demo.rb  context_vs_no_context.rb  eager_loading.rb  lazy_loading.rb
examples/python/: calculator.py  data_utils.py  pyproject.toml
examples/python/ml/: __init__.py  predictor.py
examples/rails_demo/: .gitignore  Gemfile  pyproject.toml
examples/rails_demo/config/: application.rb  credentials.yml.enc  deploy.yml  glmocr.yaml  master.key  routes.rb
examples/rails_demo/test/: test_helper.rb
ext/rubyx/: Cargo.toml  extconf.rb
ext/rubyx/src/: async_gen.rs  context.rs  convert.rs  eval.rs  exception.rs  future.rs  gvl.rs  import.rs  lib.rs  nonblocking_stream.rs  pipe_notify.rs  python_api.rs  python_ffi.rs  python_finder.rs  ruby_helpers.rs  rubyx_object.rs  rubyx_stream.rs  stream.rs
ext/rubyx/src/python/: sync_adapter.py
lib/: rubyx-py.rb  rubyx.rb
lib/generators/rubyx/: install_generator.rb
lib/rubyx/: context.rb  error.rb  rails.rb  railtie.rb  uv.rb  version.rb
spec/: bytes_spec.rb  context_spec.rb  future_spec.rb  integration_spec.rb  nb_stream_fiber_spec.rb  nb_stream_thread_spec.rb  packaging_spec.rb  rails_spec.rb  rubyx_object_spec.rb  rubyx_spec.rb  spec_helper.rb  uv_spec.rb
spec/python/: calculator.py  data_utils.py
src/: async_gen.rs  eval.rs  lib.rs  pipe_notify.rs  python_ffi.rs  python_guard.rs  rubyx_object.rs  stream.rs  test_helpers.rs
(+28 files in other folders)
