[package]
name = "rubyx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["embed"] }
libloading = "0.9"
libc = "1.0.0-alpha.3"
thiserror = "2.0"
rb-sys = { version = "0.9", features = ["link-ruby"] }
crossbeam-channel = "0.5"

[dev-dependencies]
serial_test = "3.3.1"
